Version 1.0.8
=============

* Fix Sophia's charge ring drawing below floor.
* Fix bubbles phasing through ceilings.
* Fix TR5 imp collision handling and animations.
* Fix object camera not clearing at level end.
* Fix hardcoded double-breathing Lara sfx.
* Add TR1 slamming doors.
* Add the ability to set cold bar in rooms. (Achieved by setting cold flag to a room in Tomb Editor)

Version 1.0.7
=============

* Fix spark particles not being cleared on level reload.
* Fix visible but inactive enemies (e.g. Shiva or Xian guardians) taking damage.
* Fix blockable LOT type enemies (e.g. T-Rex and Shiva) not being able to step up 1 click or drop 2 clicks.
* Fix valve switch unable to untrigger objects.
* Fix valve and wall hole switches (OCB 5 and 6) not working as a timed switches.
* Fix incorrect Lara alignment on monkeyswing autojump.
* Fix silent crash if hair object or skin joints are missing.
* Fix holster meshes not displaying for Lara's shadow.
* Use Lara object's own meshes if Lara skin object does not exist in level file.
* Fix TR3 Shiva not taking explosive damage (should still block it with the sword).
* Fix TR3 Puna boss not blocking projectiles (grenade, rocket, harpoon, bolt) with the shield.
* Fix TR3 Puna boss and TR5 Roman statue taking fire when shot by explosive ammo.
* Fix TR2 sword and spear guardian:
	- Not doing transition from alive to stone and stone to alive.
	- Taking damage in stone mode.
	- Wrong joint index for rotating the head and torso.
	- Spear guardian not using left and right spear attack when walking (had wrong state ID set as target).
	- Killing move for spear used wrong value.
* Fix TR3 big gun spawning rocket with 0 life which caused an immediate explosion.
* Fix TR3 Tony and add boss effect for him.
* Add TR3 civvy.
* Add TR3 electric cleaner.
* Add TR3 Sophia Leigh with following OCBs:	
	- 0 – Normal mode. Sophia behaves like a regular enemy.
	- 1 – Tower mode. Behaviour matched from Tomb Raider III.