@@ -64,7 +64,7 @@ namespace TEN::Gui
 		{ ID_BURNING_TORCH_ITEM, 14, 0.5f, EulerAngles(ANGLE(90.0f), 0, 0), OPT_USE, STRING_TORCH, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_CROWBAR_ITEM, 4, 0.5f, EulerAngles(ANGLE(90.0f), 0, 0), OPT_USE, STRING_CROWBAR, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_DIARY_ITEM, 0, 0.3f, EulerAngles(0, ANGLE(180.0f), 0), OPT_DIARY, STRING_DIARY, NO_JOINT_BITS, INV_ROT_Y },
-		{ ID_COMPASS_ITEM, -14, 0.5f, EulerAngles::Zero, 0, STRING_LOAD_GAME, NO_JOINT_BITS, INV_ROT_Y },
+		{ ID_COMPASS_ITEM, -14, 0.5f, EulerAngles(ANGLE(90.0f), ANGLE(180.0f), 0), 0, STRING_LOAD_GAME, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_CLOCKWORK_BEETLE, 14, 0.5f, EulerAngles::Zero, OPT_USE, STRING_MECHANICAL_SCARAB, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_CLOCKWORK_BEETLE_COMBO1, 18, 0.5f, EulerAngles::Zero, OPT_COMBINABLE, STRING_MECHANICAL_SCARAB_1, NO_JOINT_BITS, INV_ROT_Y },
 		{ ID_CLOCKWORK_BEETLE_COMBO2, 14, 0.5f, EulerAngles::Zero, OPT_COMBINABLE, STRING_MECHANICAL_SCARAB_2, NO_JOINT_BITS, INV_ROT_Y },
