@@ -6,6 +6,7 @@ Version 1.0.8
 * Fix TR5 imp collision handling and animations.
 * Fix object camera not clearing at level end.
 * Fix hardcoded double-breathing Lara sfx.
+* Fix inventory compass.
 * Add TR1 slamming doors.
 * Add the ability to set cold bar in rooms. (Achieved by setting cold flag to a room in Tomb Editor)
 
